--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.22.3",
     "react-spring-lightbox": "^1.8.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "tech-stack-icons": "^3.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
