bing search key

--- a/src/assets/Projects.json
+++ b/src/assets/Projects.json
@@ -8,7 +8,7 @@
   {
     "id": 2,
     "title": "Shopping site",
-    "description": "An e-commerce shopping site that has a lof of interaction complete with a receipt. Found locally for quick viewing by React",
+    "description": "An e-commerce shopping site that has a lot of interaction complete with a receipt. Found locally for quick viewing by React",
     "local": "/products"
   },
   {
